--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,14 +2,15 @@
     <h2>Login</h2>
     <form id="login-form">
         <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email" required />
+            <label for="email-login">Email:</label>
+            <input type="email" id="email-login" name="email" placeholder="Enter your email" required />
         </div>
         <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Enter your password" required />
+            <label for="password-login">Password:</label>
+            <input type="password" id="password-login" name="password" placeholder="Enter your password" required />
         </div>
         <button type="submit" class="btn">Login</button>
     </form>
     <p>Don't have an account? <a href="/signup">Sign up here</a></p>
 </div>
+<script src="/js/login.js"></script>
