--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -18,4 +18,4 @@
         </form>
         <p>Already have an account? <a href="/login">Log in here</a>.</p>
 </div>
-<script src="/js/login.js"></script>
+<script src="/js/signup.js"></script>
