--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
                     <li>
                         <h3><a href="/posts/{{post.id}}">{{post.title}}</a></h3>
                         <p>{{post.content}}</p>
-                        <small>Posted on {{post.createdAt}}</small>
+                        <small>Posted on {{format_date post.createdAt}}</small>
                         <a href="/edit/{{post.id}}" class="edit-btn">Edit</a>
                         <form action="/delete/{{post.id}}" method="POST" class="delete-form">
                             <button type="submit">Delete</button>
