--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,10 @@
 
 <section class="dashboard">
     <h1>Welcome, {{username}}!</h1>
+
+    <div class="create-post">
+        <a href="/dashboard/new" class="btn btn-primary">Create New Post</a>
+    </div>
     <div class="post-list">
         <h2>Your Posts</h2>
         {{#if userPosts.length}}
