--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -21,5 +21,5 @@
 </div>
 
 {{#unless posts.length}}
-<p class="no-posts">No posts available yet. <a href="/post/new">Be the first to post!</a></p>
+<p class="no-posts">No posts available yet. <a href="/dashboard/new">Be the first to post!</a></p>
 {{/unless}}
