created partials for comments and posts

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -15,14 +15,7 @@
     <footer>
         <h2>Comments</h2>
         <ul>
-            {{#each post.comments}}
-                <li>
-                    <p><strong>{{this.user.username}}:</strong> {{this.comment}}</p>
-                    <p><small>Posted on {{format_date this.createdAt}}</small></p>
-                </li>
-            {{else}}
-                <li>No comments yet. Be the first to comment!</li>
-            {{/each}}
+            {{> comments post.comments}}
         </ul>
     </footer>
 </article>
