--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,23 +1,5 @@
 <div class="posts-container">
-    {{#each posts as |post|}}
-    <article class="post">
-        <div class="post-header">
-            <h2 class="post-title">
-                <a href="/posts/{{post.id}}">{{post.title}}</a>
-            </h2>
-            <div class="post-meta">
-                Posted by {{post.user.username}} on {{format_date post.createdAt}}
-            </div>
-        </div>
-        <div class="post-content">
-            {{!-- Optionally show a preview of the content --}}
-            <p>{{truncate post.content 200}}</p>
-        </div>
-        <div class="post-footer">
-            <a href="/posts/{{post.id}}" class="read-more">Read More</a>
-        </div>
-    </article>
-    {{/each}}
+    {{> post-info posts}}
 </div>
 
 {{#unless posts.length}}
