updaed css styling for comments section

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,5 +1,5 @@
 {{#each this}}
-<li>
+<li class="comment-row">
     <p><strong>{{this.user.username}}:</strong> {{this.comment}}</p>
     <p><small>Posted on {{format_date this.createdAt}}</small></p>
 </li>
