--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,6 +11,6 @@
         </div>
         <button type="submit" class="btn">Login</button>
     </form>
-    <p>Don't have an account? <a href="/signup">Sign up here</a></p>
+    <p style="text-align: center;">Don't have an account? <a href="/signup">Sign up here</a></p>
 </div>
 <script src="/js/login.js"></script>
