--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,7 +1,7 @@
 <article class="single-post">
     <header>
         <h1>{{post.title}}</h1>
-        <p>By {{post.user.username}} on {{format_date post.createdAt}}</p>
+        <p style="padding-left: 10px;">By {{post.user.username}} on {{format_date post.createdAt}}</p>
     </header>
     <section class="post-content">
         <p>{{post.content}}</p>
